Closed #5 Added the dotted line beneath each layout part when the mouse if over the resize handles Shifted the resize handles to the right Fixed #14 Now layout parts are forced to be set 100% at all time

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,6 +28,17 @@ hr {
     outline: 1px dashed #444 !important;
 }
 
+.mx-layout-resize-indicator {
+    width:100%;
+    height: 1px;
+    border-bottom: 1px dashed #444;
+    position:absolute;
+    bottom:0px;
+    left:0;
+    display:none;
+}
+
+
 #selection-container{
     outline: 1px solid orange;
     cursor: move !important;
@@ -46,6 +57,23 @@ hr {
     left:50%;
     margin-left: -490px;
 }
+
+.ui-layout-resize:before {
+    content: "\f0dc";
+}
+
+.ui-layout-resize {
+    z-index:1000000;
+    background-color:#00dbff;
+    left: auto;
+    right: 30px;
+    width: 28px;
+    height: 12px;
+    font-family: FontAwesome;
+    font-size: 10px;
+    text-align: center;
+}
+
 
 .form {
     background-color: rgba(204,204,204,0.9);
